[package]
name = "rust-aws-ebs-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_volume_limit_calculator = "0.1.1"
lru = "0.8"
prometheus = "0.13"
prometheus_exporter = "0.8"
lazy_static = "^1.4"
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.14"
clap = "3.2"
rusoto_core = "0.48.0"
rusoto_rds = "0.48.0"
rusoto_cloudwatch = "0.48.0"
async-trait = "0.1.58"
chrono = "0.4.23"
futures = "0.3"
